# pyMuellerMat

./: .gitignore  MuellerMat.py  README.md  pyproject.toml  setup.py
pyMuellerMat/: MuellerMat.py  common_mm_functions.py  common_mms.py  components.py  mm_functions.py  naco.py  testing.py
pyMuellerMat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyMuellerMat/Instruments/: Combine GPI Data.ipynb  Combine Vampires Data.ipynb  Exploring_Kmirror_Notebook.ipynb  sphere.py
pyMuellerMat/Notebooks/:  Vampires_HD29835.ipynb  Exploring_Kmirror_Notebook.ipynb  tmp.py  vampires_calibration_model.ipynb  vampires_flc_retardance.ipynb
pyMuellerMat/Tutorials/: Simple Dual Channel Polarimeter Example.ipynb  Sphere_Tutorial-TW HYa.ipynb
